hw4-lecture10/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myappgateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myappbackend
spec:
  hosts:
    - myappbackend
  http:
  - route:
    - destination:
        host: myappbackend
        subset: v1
      weight: 50
    - destination:
        host: myappbackend
        subset: v2
      weight: 50
